# MCP-Agent

./: .gitignore  AGENTS.md  README.MD  config.json  main.py  pyproject.toml
src/agent/: __init__.py  service.py  utils.py  views.py
src/agent/mcp/prompt/: system.md
src/agent/mcp/tools/: __init__.py
src/agent/prompt/: __init__.py  observation.md  service.py  system.md
src/agent/registry/: __init__.py  service.py  views.py
src/agent/tools/: __init__.py  service.py  views.py
src/llms/: anthropic.py  base.py  cerebras.py  google.py  groq.py  mistral.py  ollama.py  open_router.py  openai.py  views.py
src/mcp/client/: service.py  session.py
src/mcp/registry/: __init__.py  service.py
src/mcp/transport/: stdio.py
src/mcp/types/: registry.py  tools.py
src/messages/: __init__.py  service.py
src/process/: service.py  utils.py  views.py
src/process/prompt/: service.py  system.md
src/process/tools/: service.py  views.py
src/tool/: __init__.py  service.py
tests/: test_agent.py  test_utils.py
